# financial_agent

./: .gitignore  README.md  pyproject.toml
db/e1f80bcf-6f6b-45d2-80c1-d6203c436fab/: index_metadata.pickle
financial_agent/: run.py
