[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "financial_agent"
version = "v0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
crewai = "^0.100.0"
pydantic = "*"
crewai_tools = ">=0.5.0"
sec_api = "*"
embedchain = "^0.1.124"
requests = "*"
html2text = "*"
python-dotenv = "*"

[tool.poetry.dependencies.naptha-sdk]
git = "https://github.com/NapthaAI/naptha-sdk.git"
branch = "crewai"
