[project]
name = "financial_agent"
version = "v0.1.0"
description = ""
authors = []
requires-python = "<3.13,>=3.10"
readme = "README.md"
dependencies = [
    "python-dotenv",
    "crewai<1.0.0,>=0.102.0",
    "pydantic",
    "crewai-tools<1.0.0,>=0.36.0",
    "sec-api",
    "embedchain<1.0.0,>=0.1.127",
    "requests",
    "html2text",
    "naptha-sdk @ git+https://github.com/NapthaAI/naptha-sdk.git@plugins",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.uv.sources]
naptha-sdk = { git = "https://github.com/NapthaAI/naptha-sdk.git", branch = "plugins" }

[tool.pdm.build]
includes = []
