[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "financial_agent"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = ["naptha-sdk @ git+https://github.com/NapthaAI/naptha-sdk.git@plugins", "python-dotenv", "crewai>=0.102.0,<0.103", "pydantic", "crewai_tools>=0.36.0,<0.37", "sec_api", "embedchain>=0.1.127,<0.2", "requests", "html2text"]

[[project.authors]]
name = "Your Name"
email = "your.email@example.com"
[tool.hatch.metadata]
allow-direct-references = true